# bonsai

./: CMakeLists.txt  Makefile  serial.cu  test.py
include/: dataset.h  kernel.h  serial.h  serial.hpp  traversal.h  types.h
src/: bonsai_main.cpp  bonsai_python.cpp  serial.cu
